chore: Add NodeInitializer and fix some bugs
Signed-off-by: Javier Roman <javier.rmgz@gmail.com>
Signed-off-by: Markel Txasko <mtxasko17@gmail.com>